logs/watchdog_20251012_1845.log
[12/10/2025 18:45:01,65] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 18:45:01,90] END WATCHDOG 
